# exojava

./: .gitignore  Cargo.toml  DOC.md
classdir/: Epic.java  EpicBase.java  EpicSub.java
exo-class-file/: Cargo.toml
exo-class-file-fuzz/: Cargo.toml
exo-class-file-fuzz/src/: main.rs
exo-java-bin/: Cargo.toml
exo-jvm/: Cargo.toml
exo-jvm/nugc/: Cargo.toml
exo-jvm/nugc/src/: lib.rs
exo-jvm/nugc/src/collector/: mod.rs
exo-jvm/nugc/src/implementation/: mod.rs
exo-jvm/nugc/src/testlang/: compile.rs  mod.rs  parse.rs
exo-jvm/old/: lib.rs
exo-jvm/old/memory/: gc.rs  mod.rs
exo-jvm/old/vm/: mod.rs
exo-jvm/old/vm/thread/: mod.rs
exo-jvm/src/: lib.rs
exo-jvm/src/memory/: linked_list.rs
exo-jvm/src/nugc/: mod.rs
exo-jvm/src/nugc/collector/: mod.rs
exo-jvm/src/nugc/implementation/: linked_list.rs  mod.rs
exo-jvm/src/nugc/nu_collector/: mod.rs  thread.rs
exo-jvm/src/nugc/nugc-derive/: Cargo.toml
exo-jvm/src/nugc/nugc-derive/src/: lib.rs
exo-jvm/src/nugc/structure/: mod.rs  vec.rs
exo-jvm/src/nugc/testlang/: compile.rs  parse.rs
exo-jvm/src/structure/: mod.rs
exo-jvm/src/value/: mod.rs  types.rs
exo-jvm/src/vm/: mod.rs  object.rs  thread.rs
exo-jvm/src/vm/bytecode/: mod.rs  ssa.rs
exo-jvm/src/vm/class/: bootstrap.rs  constant_pool.rs  mod.rs
exo-jvm/src/vm/collector/: gc.rs  mod.rs  object.rs
exo-jvm/src/vm/collector/structures/: mod.rs  reference.rs  structure.rs
exo-jvm/src/vm/thread/: call_stack.rs
java-compiler/: Cargo.toml
local/: IncompatibleClassChangeError.java  OptClass.java  Test.java
(+47 files in other folders)
